Changelog
=========

0.4.0-SVN_UNRELEASED
-----

* Moved tool-link from users preferences to plone_control_panel.
* Created a link in site_actions to access the management view.

0.3.0
-----

* No more Plone 2.5 support.

0.2.0
-----

* Albert Pallas provided internationalization support
* Again Albert added catalan, spanish and french translations.
* Added italian translation.

0.1.0
-----

* Initial release
